# beziers

./: Cargo.toml
src/: bstroke.rs  geometry.rs  lib.rs  main.rs
