[package]
name = "beziers"
version = "0.1.0"
authors = ["Vlad Zhukov <vlad.zhukov@elektron.se>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
miniquad = "0.3.0-alpha.22"
glam = { version = "0.10.0", features = ["scalar-math"] }
rand = "0.7.3"

["lib"]
name = "bezier"

